# python-llm-api

./: .gitignore  CLAUDE.md  README.md  cli.py  mcp_server.py  pyproject.toml  requirements.txt  sample-prompt.md  skills-lock.json
.agents/: AGENTS.md
.github/: dependabot.yml
.github/workflows/: sanity-check.yml
app/: app_exception.py  config.py  db.py  langfuse.py  llm_model.py  log.py  main.py  util.py
app/agents/: __init__.py  agent_chooser.py  agent_memory.py  car_hire_agent.py  generate_image_agent.py  marketing_agent.py  rag_ingest_agent.py  rag_query_agent.py  weather_agent.py
app/models/: __init__.py  llm_job.py  llm_memory.py  rag.py
app/routes/: llm_job.py
specs/: api-llm-job.md  url-rag.md
tests/: conftest.py  test_agent_memory.py  test_generate_image_agent.py  test_llm_job.py  test_main.py  test_rag_agents.py  test_weather_agent.py
