[project]
name = "python-llm-api"
version = "0.1.0"
description = "Multi-agent orchestration with LangChain/LangGraph & Langfuse"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "pydantic>=2.7.0",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.39",
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langfuse>=2.0.0",
    "litellm>=1.93.0",
    "langchain-community>=0.4.2",
    "langchain-litellm>=0.6.4",
    "langchain>=1.3.14",
    "boto3>=1.43.51",
    "mcp>=0.1.0",
    "beautifulsoup4>=4.12.0",
    "langchain-text-splitters>=0.3.0",
]
